welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:7: error: illegal start of simple expression
for (i<-1 to 4=){tofaireMotif();}
               ^PictureMono2:8: error: ')' expected but '}' found.
}
^